# portable-wisdom

./: .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  test.yml
portable_wisdom/: article.py  cache.py  config.py  epub.py  source.py  transformers.py  wisdom.py
portable_wisdom/sources/: __init__.py  instapaper.py
portable_wisdom/styles/: nook-glowlight-3.css
portable_wisdom/tests/: test_article.py  test_cache.py  test_source.py
